Dodao kupnju licence
