# app/Http/Controllers/Api/V1/LicenceController.php
@@ -66,7 +66,7 @@ class LicenceController extends Controller
         if (Domain::where('name', DomainService::parseDomain($data->domain))->exists()) {
             return response()->json([
                 "errors" => [
-                    ErrorService::write($data->email, 403, "Domain already registered. Enter your licence code.", $request, "App\Http\Controllers\Api\V1\LicenceController@startTrial", ''),
+                    ErrorService::write($data->email, 403, "Domain already registered. Enter your licence code.", $request, "App\Http\Controllers\Api\V1\LicenceController@startTrial" . __LINE__, ''),
                 ],
             ], 403);
         }
@@ -75,7 +75,7 @@ class LicenceController extends Controller
         if ($data->licence != 'trial') {
             return response()->json([
                 "errors" => [
-                    ErrorService::write($data->email, 403, "Invalid trial licence key.", $request, "App\Http\Controllers\Api\V1\LicenceController@startTrial", ''),
+                    ErrorService::write($data->email, 403, "Invalid trial licence key.", $request, "App\Http\Controllers\Api\V1\LicenceController@startTrial" . __LINE__, ''),
                 ],
             ], 403);
         }
@@ -95,7 +95,7 @@ class LicenceController extends Controller
             'licence_uid' => Uuid::uuid4()->toString(),
             'valid_from' => Carbon::today()->toDateString(),
             'valid_until' => null,
-            'licence_type_id' => 1,
+            'licence_type_id' => config('licence-types.trial'),
             'usage_limit' => config('usage.trial')
         ]);
 
@@ -170,7 +170,7 @@ class LicenceController extends Controller
             return response()->json([
                 "errors" => [
                     [
-                        ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@check", '')
+                        ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@check" . __LINE__, '')
                     ]
                 ],
             ], 403);
@@ -182,7 +182,7 @@ class LicenceController extends Controller
         if (!Licence::where('user_id', $user->id)->where('domain_id', $domain->id)->where('licence_uid', $data->licence)->exists()) {
             return response()->json([
                 "errors" => [
-                    ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@check", '')
+                    ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@check" . __LINE__, '')
                 ],
             ], 403);
         }
@@ -190,12 +190,13 @@ class LicenceController extends Controller
         $licence = Licence::where('user_id', $user->id)
             ->where('domain_id', $domain->id)
             ->where('licence_uid', $data->licence)
+            ->latest()
             ->first();
 
         if ($licence->user_id != $user->id || $licence->domain_id != $domain->id) {
             return response()->json([
                 "errors" => [
-                    ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@check", '')
+                    ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@check" . __LINE__, '')
                 ],
             ], 403);
         }
@@ -211,11 +212,125 @@ class LicenceController extends Controller
         ], 201);
     }
 
+    /**
+     * @OA\Post(
+     *     path="/v1/licence/buy",
+     *     summary="Buy a licence",
+     *     description="Kupnja licence. Korisnik mora imati nekakvu licencu. 'Licence' vrijednost mora biti 'Full'",
+     *     operationId="buyLicence",
+     *     tags={"Licence"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="JSON payload with user data",
+     *         @OA\JsonContent(
+     *             required={"user"},
+     *             @OA\Property(property="user", type="object", description="User data", 
+     *                 @OA\Property(property="licence", type="string", description="User's licence type ('full')"),
+     *                 @OA\Property(property="email", type="string", description="User's email"),
+     *                 @OA\Property(property="domain", type="string", description="User's domain")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Licence successfully purchased",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="licence", type="string", description="Purchased licence UID"),
+     *             @OA\Property(property="domain", type="string", description="User's domain"),
+     *             @OA\Property(property="user", type="string", description="User's email"),
+     *             @OA\Property(property="valid_from", type="string", description="Licence validity start date"),
+     *             @OA\Property(property="valid_until", type="string", description="Licence validity end date"),
+     *             @OA\Property(property="usage", type="integer", description="Current licence usage"),
+     *             @OA\Property(property="usage_limit", type="integer", description="Licence usage limit")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="Invalid request or user",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="errors", type="array", description="List of errors",
+     *                 @OA\Items(
+     *                     @OA\Property(property="message", type="string", description="Error message"),
+     *                     @OA\Property(property="code", type="integer", description="Error code"),
+     *                     @OA\Property(property="details", type="string", description="Error details")
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
+     */
     public function buy(Request $request)
     {
         $requestBody = $request->getContent();
         $jsonData = json_decode($requestBody);
 
         $data = $jsonData->user;
+
+        if ($data->licence != 'full') {
+            return response()->json([
+                "errors" => [
+                    ErrorService::write($data->email, 403, "Invalid trial licence key.", $request, "App\Http\Controllers\Api\V1\LicenceController@buy" . __LINE__, ''),
+                ],
+            ], 403);
+        }
+
+        if (
+            !User::where('email', $data->email)->exists() ||
+            !Domain::where('name', DomainService::parseDomain($data->domain))->exists()
+        ) {
+            return response()->json([
+                "errors" => [
+                    [
+                        ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@buy" . __LINE__, '')
+                    ]
+                ],
+            ], 403);
+        }
+
+        $user = User::where('email', $data->email)->first();
+        $domain = Domain::where('name', DomainService::parseDomain($data->domain))->first();
+
+        if (!Licence::where('user_id', $user->id)->where('domain_id', $domain->id)->exists()) {
+            return response()->json([
+                "errors" => [
+                    ErrorService::write($data->email, 403, "User does not exist.", $request, "App\Http\Controllers\Api\V1\LicenceController@buy" . __LINE__, '')
+                ],
+            ], 403);
+        }
+
+        $licence = Licence::where('user_id', $user->id)
+            ->where('domain_id', $domain->id)
+            ->first();
+
+        //Full licenca
+        if (!is_null($licence->valid_until) && !is_null($licence->valid_until) && $licence->licence_type_id === config('licence-types.full')) {
+            $licence_start = $licence->valid_until;
+            $licence_end = Carbon::parse($licence_start)->addYear()->toDateString();
+
+            //Trial licenca
+        } else if (is_null($licence->valid_until) && $licence->licence_type_id === config('licence-types.trial')) {
+            $licence_start = Carbon::today()->toDateString();
+            $licence_end = Carbon::today()->addYear()->toDateString();
+        }
+
+        $new_licence = Licence::create([
+            'user_id' => $user->id,
+            'domain_id' => $domain->id,
+            'licence_uid' => $licence->licence_uid,
+            'valid_from' => $licence_start,
+            'valid_until' => $licence_end,
+            'licence_type_id' => config('licence-types.full'),
+            'usage_limit' => config('usage.full')
+        ]);
+
+        return response()->json([
+            'licence' => $new_licence->licence_uid,
+            'domain' => $domain->name,
+            'user' => $user->email,
+            'valid_from' => $new_licence->valid_from,
+            'valid_until' => $new_licence->valid_until,
+            'usage' => $new_licence->usage,
+            'usage_limit' => $new_licence->usage_limit,
+        ], 201);
     }
 }
